# amazon-kinesis-video-streams-webrtc-sdk-c

./: CMakeLists.txt
CMake/Dependencies/: libopenssl-CMakeLists.txt  libsrtp-CMakeLists.txt
samples/: CMakeLists.txt  Common.c  Samples.h  kvsWebRTCClientMaster.c  kvsWebRTCClientViewer.c  mp4streamfetch.c  mp4streamfetch.h
samples/scripts/: chk-dependency.sh
samples_mijia/: CMakeLists.txt  Common.c  Makefile  kvsWebRTCClientMaster.c  mediaformat.h  streamfetch.c  streamfetch.h
src/source/Signaling/: LwsApiCalls.c  LwsApiCalls.h  Signaling.c  StateMachine.c
